--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.18.2",
     "http-status": "^1.7.3",
     "lint-staged": "^15.1.0",
-    "mongoose": "^8.0.2"
+    "mongoose": "^8.0.2",
+    "zod": "^3.22.4"
   }
 }
